Set register_token to admin only

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "cloak"
+name = "deaddrop"
 version = "0.1.0"
 authors = ["luminaryphi <luminaryphi@protonmail.com>"]
-edition = "2018"
+edition = "2022"
 
 exclude = [
   # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
